third_party/move/move-compiler-v2/tests/copy-propagation/mut_refs_3.exp
============ initial bytecode ================

[variant baseline]
fun m::test($t0: u64): u64 {
     var $t1: u64
     var $t2: &mut u64
     var $t3: &mut u64
     var $t4: &mut u64
     var $t5: &mut u64
     var $t6: u64
  0: $t3 := borrow_local($t0)
  1: $t2 := infer($t3)
  2: $t4 := infer($t2)
  3: $t5 := infer($t4)
  4: $t6 := 0
  5: write_ref($t2, $t6)
  6: $t1 := read_ref($t5)
  7: return $t1
}


Diagnostics:
error: cannot write local `a` since it is borrowed
  ┌─ tests/copy-propagation/mut_refs_3.move:7:9
  │
5 │         let b = a;
  │             - previously mutably borrowed here
6 │         let c = b;
7 │         *a = 0;
  │         ^^^^^^ write attempted here
8 │         *c
  │         -- conflicting reference `c` used here

============ after DeadStoreElimination: ================

[variant baseline]
fun m::test($t0: u64): u64 {
     var $t1: u64
     var $t2: &mut u64
     var $t3: &mut u64
     var $t4: &mut u64
     var $t5: &mut u64
     var $t6: u64
  0: $t3 := borrow_local($t0)
  1: $t2 := move($t3)
  2: $t4 := copy($t2)
  3: $t5 := move($t4)
  4: $t6 := 0
  5: write_ref($t2, $t6)
  6: $t1 := read_ref($t5)
  7: return $t1
}
